refactored code to remove event listeners from main function, added dark mode, pieces now lock when in correct place

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     --secondary-color: #333333;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+
 body{
     color: var(--secondary-color);
     background-color: var(--primary-color);
@@ -14,7 +16,12 @@ body{
     justify-content: flex-start;
     flex-direction: column;
 }
-
+body.darkMode {
+    --primary-color: #1D1D1D;
+    --secondary-color: #F5F5F5;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+}
 main{
     display: flex;
     align-items: center;
